feat: add native support for Maven

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.graalvm.buildtools</groupId>
+				<artifactId>native-maven-plugin</artifactId>
+				<configuration>
+					<imageName>dadjoke</imageName>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
